# fleet-spec-sheet

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
illustrator/: FleetSpecSheet_V1.jsx  README.md
src/fleet_spec_sheet/: __init__.py  cli.py  generator.py
